# ocaml-ci

api/: build.capnp  client.ml  client.mli  dune  solver.ml  worker.ml
gitlab/: main.ml
lib/: analyse.ml  backend_solver.ml  backend_solver.mli
service/: api_impl.ml  api_impl.mli  local.ml  main.ml  pipeline.mli
solver/: service.ml  solver.ml
test/: test_analyse.ml
web-ui/controller/: backend.ml
